Sample code updated using fragments

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_animate_message"
-        android:layout_centerInParent="true"
-        android:text="@string/animate_message_icon"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fl_frag_container"
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/bottom_nav"
         />
 
     <com.wwdablu.soumya.lottiebottomnav.LottieBottomNav
